@@ -19,6 +19,9 @@ import win32com.client.connect
 import win32com.server.util
 import winerror
 from win32com.axscript import axscript
+from win32com.server.exception import COMException, IsCOMServerException
+
+from . import error  # axscript.client.error
 
 
 def RemoveCR(text):
@@ -32,9 +35,6 @@ SCRIPTTEXT_FORCEEXECUTION = -2147483648  # 0x80000000
 SCRIPTTEXT_ISEXPRESSION = 0x00000020
 SCRIPTTEXT_ISPERSISTENT = 0x00000040
 
-from win32com.server.exception import COMException, IsCOMServerException
-
-from . import error  # ax.client.error
 
 state_map = {
     axscript.SCRIPTSTATE_UNINITIALIZED: "SCRIPTSTATE_UNINITIALIZED",
